--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -253,6 +253,10 @@ border-radius: var(--radius-pill);
   display: none;
 }
 
+.primary-btn .op {
+  display: block;
+}
+
 .primary-btn[disabled]{
   background-color: var(--outline);
   color: var(--on-surface-variant);
